# jit_test

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.build-llvm  README.md  test.sh
.github/workflows/: test.yml
cmake/modules/: AddJitTest.cmake
include/: cudaJIT.h
include/jit_test/Basic/: Version.h  Version.inc.in
lib/Basic/: CMakeLists.txt  Version.cpp
plots/: JIT.ipynb  results.txt  results_1000.csv  results_10000.csv  results_100000.csv  results_1000000.csv  test.sh
plots/data/: cmake_build_trace_nreact_1000_nspecies_10.json  cmake_build_trace_nreact_1000_nspecies_100.json  cmake_build_trace_nreact_1000_nspecies_1000.json  cmake_build_trace_nreact_1000_nspecies_1500.json  cmake_build_trace_nreact_1000_nspecies_2000.json  cmake_build_trace_nreact_1000_nspecies_500.json  cmake_build_trace_nreact_100_nspecies_10.json  cmake_build_trace_nreact_100_nspecies_100.json  cmake_build_trace_nreact_100_nspecies_1000.json  cmake_build_trace_nreact_100_nspecies_1500.json  cmake_build_trace_nreact_100_nspecies_2000.json  cmake_build_trace_nreact_100_nspecies_500.json  cmake_build_trace_nreact_10_nspecies_10.json  cmake_build_trace_nreact_10_nspecies_100.json  cmake_build_trace_nreact_10_nspecies_1000.json  cmake_build_trace_nreact_10_nspecies_1500.json  cmake_build_trace_nreact_10_nspecies_2000.json  cmake_build_trace_nreact_10_nspecies_500.json  cmake_build_trace_nreact_2500_nspecies_10.json  cmake_build_trace_nreact_2500_nspecies_100.json  cmake_build_trace_nreact_2500_nspecies_1000.json  cmake_build_trace_nreact_2500_nspecies_1500.json  cmake_build_trace_nreact_2500_nspecies_2000.json  cmake_build_trace_nreact_2500_nspecies_500.json  cmake_build_trace_nreact_5000_nspecies_10.json  cmake_build_trace_nreact_5000_nspecies_100.json  cmake_build_trace_nreact_5000_nspecies_1000.json  cmake_build_trace_nreact_5000_nspecies_1500.json  cmake_build_trace_nreact_5000_nspecies_2000.json  cmake_build_trace_nreact_5000_nspecies_500.json  cmake_build_trace_nreact_500_nspecies_10.json  cmake_build_trace_nreact_500_nspecies_100.json  cmake_build_trace_nreact_500_nspecies_1000.json  cmake_build_trace_nreact_500_nspecies_1500.json  cmake_build_trace_nreact_500_nspecies_2000.json  cmake_build_trace_nreact_500_nspecies_500.json  python_jit.csv
plots/numba/: Derivates.py  call_python.cpp  example.py  numba_jit_test.py
rev/: test.c
src/: ClassicDeriv.cpp  ClassicDeriv.h  JitDeriv.cpp  JitDeriv.h  JitTest.cpp  leJIT.h
test/: CMakeLists.txt  cudaJIT.cpp
test/cuda-nvrtc-cdp/: README.md  saxpy  saxpy.cpp
test/derivative/: CMakeLists.txt  ClassicDeriv.cpp  ClassicDeriv.h  CudaGeneralDeriv.cpp  CudaGeneralDeriv.cu  CudaGeneralDeriv.h  CudaJitDeriv.cpp  CudaJitDeriv.cu  CudaJitDeriv.h  FortranPreproccessed.h  JitDeriv.cpp  JitDeriv.h  JitTest.cpp  deriv_openacc.cpp  deriv_openacc.h  general.cu  general_flipped.cu  jit.cu  jit_compile.h  jit_flipped.cu
test/derivative/Fortran/: CMakeLists.txt  GenerateFortran.cpp
test/derivative/NVRTC/: deriv_nvrtc.cpp
test/matrix-multiply/: CMakeLists.txt  jit_mat_mul.cpp  jit_mat_mul.h  main.c  mat_mul.c
tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt  Driver.cpp
